--- a/emacs/.doom.d/config.org
+++ b/emacs/.doom.d/config.org
@@ -2517,8 +2517,8 @@ home-emacs
 ** evil
 #+begin_src scheme :noweb-ref guix-pin
 (pin "emacs-evil-collection"
-     #:commit "163792a823bcdb2dae7ac1bba4018adfac35dca2"
-     #:hash "1vfhs1f4s0ygys9cs2iixv9f7rjf69gmvban68j92ndv6bvq31qg")
+     #:commit "d052ad2ec1f6a4b101f873f01517b295cd7dc4a9"
+     #:hash "1q9w1wwlfcvw9xhpcv56qx9y6g2wrfrl1mcs2gzbds9qb2nszf7y")
 (pin "emacs-evil-org"
      #:uri "https://github.com/doomelpa/evil-org-mode"
      #:commit "06518c65ff4f7aea2ea51149d701549dcbccce5d"
@@ -3646,11 +3646,6 @@ eval "$(atuin init bash)"
 (after! async
   (dired-async-mode 1))
 
-(defun dired-open/torrent (fn)
-  (let ((dir (read-directory-name "Directory: " aria2-download-directory nil t)))
-    (aria2-downloads-list)
-    (addTorrent aria2--cc fn :dir (expand-file-name dir))))
-
 (after! dired-x
   (setq dired-guess-shell-alist-user
         '(("\\.\\(?:mp4\\|mkv\\|avi\\)\\(?:\\.part\\)?\\'" "jaro"))))
@@ -3658,7 +3653,7 @@ eval "$(atuin init bash)"
 (use-package! dired-open
   :after dired
   :custom
-  (dired-open-extensions-elisp `(("torrent" . dired-open/torrent)))
+  (dired-open-extensions-elisp `(("torrent" . aria2-download)))
   (dired-open-functions '(dired-open-guess-shell-alist
                           dired-open-call-function-by-extension)))
 #+end_src
